k8s/gcp/harbor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    shared-gateway-access: "true"
    goldilocks.fairwinds.com/enabled: "true"
