k8s/gcp/harbor/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
  - name: istio-ingress-gateway
    namespace: istio-ingress
  hostnames:
  - "harbor.muso-lab.dev"
  rules:
  - backendRefs:
    - name: harbor
      port: 80
